// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectDataVisualizer > renders correctly if value is unchanged 1`] = `
<div>
  
  <div
    class="text-secondary-dark"
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key1: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value1
    </span>
    <span>
       (Unchanged) 
    </span>
    
  </div>
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key2: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value2
    </span>
    <!--v-if-->
    
  </div>
  
  <br />
</div>
`;

exports[`ObjectDataVisualizer > renders correctly when value has array 1`] = `
<div>
  
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key1: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value1
    </span>
    <!--v-if-->
    
  </div>
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key2: 
    </span>
    <object-data-visualizer-stub
      keyclass=""
      value="[object Object],[object Object]"
    />
  </div>
  
  <br />
</div>
`;

exports[`ObjectDataVisualizer > renders correctly when value is empty 1`] = `
<span>
  -
</span>
`;

exports[`ObjectDataVisualizer > renders correctly when value is not empty 1`] = `
<div>
  
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key1: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value1
    </span>
    <!--v-if-->
    
  </div>
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key2: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value2
    </span>
    <!--v-if-->
    
  </div>
  
  <br />
</div>
`;

exports[`ObjectDataVisualizer > renders correctly with key prefix 1`] = `
<div>
  
  <div
    class=""
  >
    <span
      class="class1"
    >
      prefix1
    </span>
    <span
      class="font-weight-medium"
    >
      key1: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value1
    </span>
    <!--v-if-->
    
  </div>
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key2: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value2
    </span>
    <!--v-if-->
    
  </div>
  
  <br />
</div>
`;

exports[`ObjectDataVisualizer > renders correctly without key 1`] = `
<div>
  
  <div
    class=""
  >
    <!--v-if-->
    <!--v-if-->
    <object-data-visualizer-stub
      keyclass=""
      value="[object Object],[object Object]"
    />
  </div>
  <div
    class=""
  >
    <!--v-if-->
    <span
      class="font-weight-medium"
    >
      key2: 
    </span>
    
    <!-- eslint-disable-next-line vue/no-v-html -->
    <span>
      value2
    </span>
    <!--v-if-->
    
  </div>
  
  <br />
</div>
`;
